Fix overflow on mobile screen on contact page

--- a/style.css
+++ b/style.css
@@ -832,7 +832,7 @@ iframe {
     display: flex;
     justify-content: center;
     max-width: 100%;
-    width: 950px;
+    width: 800px;
     height: 500px;
     margin: 0 auto;
     margin-bottom: 50px;
@@ -1111,6 +1111,16 @@ iframe {
 
     .contact-info {
         order: -1;
+    }
+
+    .google-maps {
+        margin-top: 50px;
+        padding: 0 20px;
+    }
+
+    iframe {
+        width: 100%;
+        height: 300px;
     }
 
     /* Instructors Mobile */
